added contact info and link highlighting

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 
 				<div class="collapse navbar-collapse">
 					<ul class="nav navbar-nav">
+						<li><a href="#">Contact Info</a></li>
 						<li class="dropdown">
 							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Links<span class="caret"></span></a>
 							<ul class="dropdown-menu">
@@ -36,7 +37,6 @@
 								<li><a href="#">Gitlab</a></li>
 								<li><a href="#">ColorPicker Game</a></li>	
 						</li>
-						
 					</ul>
 				</div> <!-- end navbar collapese -->
 
@@ -59,27 +59,32 @@
 			<div class="container-fluid">
 				<div class="row">
 					<div class="col-md-12">
-						<p>I am a senior at the Uniersity of Rhode Island pursuing my BS in Computer Science...</p>
+						<p>Current senior at the Uniersity of Rhode Island pursuing a BS in Computer Science.</p>
 					</div>
 				</div>
 
 				<div class="row">
-					<div class="col-md-4">
-						<h4>Github Profile</h4>
+					<a href="#">
+					<div class="col-md-4 link">
+						<h4>Github</h4>
 						<img src="./imgs/github.png" class="img-responsive img-circle">
 						<p>Link to my github profile</p>
 					</div>
-
-					<div class="col-md-4">
-						<h4>My Resume</h4>
-						<p>Link to a simple html version of my current resume</p>
-					</div>
+					</a>
 
 					<a href="#">
-					<div class="col-md-4">
+					<div class="col-md-4 link">
+						<h4>My Resume</h4>
+						<img src="./imgs/resume_cap.png" class="img-responsive img-circle">
+						<p>Link to a simple html version of my current resume</p>
+					</div>
+					</a>
+
+					<a href="#">
+					<div class="col-md-4 link">
 						<h4>Color Picker Game</h4>
 						<img src="./imgs/color_picker_cropped.png" class="img-responsive img-circle">	
-						<p>A simple game developed using basic javascript made following the Web Developer Bootcamp course on Udemy.</p>
+						<p>A simple game developed using basic javascript. Made following the Web Developer Bootcamp course on Udemy.</p>
 					</div>
 					</a>
 				</div>
